# pico-AS5047

./: .gitignore  CMakeLists.txt  README.md
inc/: encoder_config.h  pins_pico_board.h  project_config.h
lib/: CMakeLists.txt
lib/encoder/: CMakeLists.txt  encoder.cpp  encoder.h
lib/utils/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
